# ai-meeting-agent-community

./: .gitignore  CONTRIBUTING.md  MANIFEST.txt  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: asr_correction_glossary_ja.example.json  asr_quality_profiles.json  default_templates.json  publication_policy.json
docs/: ARCHITECTURE.md  ASR_ACCURACY_ROADMAP.md  ASR_MODEL_RECOMMENDATIONS.md  ASR_POST_CORRECTION_DESIGN.md  ASR_TO_MINUTES_WORKFLOW.md  ASR_VALIDATION.md  AUDIO_QUALITY.md  DESKTOP_ALPHA.md  DESKTOP_APP.md  EXTERNAL_ANNOUNCEMENT_STATUS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_V0.2.md  IMPLEMENTATION_REPORT_V0.3.md  IMPLEMENTATION_REPORT_V0.5.md  IMPLEMENTATION_REPORT_V0.6.md  IMPLEMENTATION_REPORT_V0.8.md  IMPLEMENTATION_REPORT_V0.9.md  LAUNCH_ASSETS.md  LOCAL_ASR_SMOKE.md  LOCAL_AUDIO_WORKFLOW.md  MAINTAINER_EVIDENCE_DASHBOARD.md  NATIVE_CAPTURE_STRATEGY.md  OPEN_CORE_STRATEGY.md  OSS_COMPLIANCE.md  OSS_RELEASE_CHECKLIST.md  OSS_RELEASE_CRITERIA.md  PLUGIN_SYSTEM.md  POST_CAPTURE_WORKFLOW.md  PRIVATE_ALPHA_V1.md  PRIVATE_CORE_BOUNDARIES.md  PRODUCT_SPEC.md  PUBLIC_ALPHA_CANDIDATE.md  PUBLIC_ALPHA_GO_NO_GO.md  PUBLIC_ALPHA_HOLD_STATUS.md  PUBLIC_ALPHA_LAUNCH_GUIDE.md  PUBLIC_ALPHA_RELEASE_STATUS.md  PUBLIC_ALPHA_VISUAL_ASSETS.md  PUBLIC_RELEASE_GATE.md  QUALITY_BAR.md  REAL_CAPTURE_EXECUTION.md  (+5 more)
examples/: README.md  glossary_ja.json  sample_meeting_ja.txt
scripts/: asr_accuracy_sweep.py  asr_correction_eval.py  asr_post_correction_run.py  (+7 more)
(+139 files in other folders)
