[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-meeting-agent-community"
version = "2.2.0"
description = "Local-first, extensible AI meeting agent community prototype with evidence-linked minutes, audio workflow foundations, and desktop-lite realtime UI demo."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "AI Meeting Agent Contributors"}]
keywords = ["meeting", "transcription", "minutes", "ai", "local-first", "oss"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.1.0"]
audio = ["sounddevice>=0.4.6", "numpy>=1.24"]
api = ["fastapi>=0.110.0", "uvicorn>=0.27.0"]
dev = ["pytest>=8.0.0", "ruff>=1.1.0", "mypy>=1.8.0"]

[project.scripts]
meeting-agent = "meeting_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.package-data]
"meeting_agent.ui.assets" = ["*.html", "*.css", "*.js"]
